[gd_scene load_steps=8 format=3 uid="uid://c8xtsoag868sb"]

[ext_resource type="Theme" uid="uid://blo0cm7b3q81j" path="res://assets/tres/main_theme.tres" id="1_7w4p8"]
[ext_resource type="PackedScene" uid="uid://du8g3fai2nbf1" path="res://scenes/lobby_item.tscn" id="2_1y85i"]
[ext_resource type="Script" path="res://scripts/main_menu/create_button.gd" id="2_o1cp0"]
[ext_resource type="Texture2D" uid="uid://7ajtvhwpb7mg" path="res://assets/loading-icon-transparent-background-22.png" id="3_btudf"]
[ext_resource type="Script" path="res://scripts/main_menu/exit_button.gd" id="3_dic71"]
[ext_resource type="Script" path="res://scripts/main_menu/waiting_node.gd" id="4_62jh7"]
[ext_resource type="Script" path="res://scripts/main_menu/lobby_selection.gd" id="4_d3rh6"]

[node name="CenterContainer" type="CenterContainer" groups=["roots"]]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_7w4p8")
metadata/_edit_use_anchors_ = true

[node name="MenuContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2

[node name="ButtonsContainer" type="VBoxContainer" parent="MenuContainer"]
layout_mode = 2

[node name="Create" type="Button" parent="MenuContainer/ButtonsContainer"]
layout_mode = 2
text = "create"
script = ExtResource("2_o1cp0")
metadata/_edit_use_anchors_ = true

[node name="Exit" type="Button" parent="MenuContainer/ButtonsContainer"]
layout_mode = 2
text = "exit"
script = ExtResource("3_dic71")
metadata/_edit_use_anchors_ = true

[node name="LeftContainer" type="VBoxContainer" parent="MenuContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("4_d3rh6")

[node name="LobbyFilterSearch" type="HBoxContainer" parent="MenuContainer/LeftContainer"]
layout_mode = 2

[node name="LobbyFilter" type="LineEdit" parent="MenuContainer/LeftContainer/LobbyFilterSearch"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Search" type="Button" parent="MenuContainer/LeftContainer/LobbyFilterSearch"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "search"

[node name="ScrollContainer" type="ScrollContainer" parent="MenuContainer/LeftContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="LobbiesContainer" type="VBoxContainer" parent="MenuContainer/LeftContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LobbyItem" parent="MenuContainer/LeftContainer/ScrollContainer/LobbiesContainer" instance=ExtResource("2_1y85i")]
layout_mode = 2

[node name="LobbyItem2" parent="MenuContainer/LeftContainer/ScrollContainer/LobbiesContainer" instance=ExtResource("2_1y85i")]
layout_mode = 2

[node name="LobbyItem3" parent="MenuContainer/LeftContainer/ScrollContainer/LobbiesContainer" instance=ExtResource("2_1y85i")]
layout_mode = 2

[node name="LobbyItem4" parent="MenuContainer/LeftContainer/ScrollContainer/LobbiesContainer" instance=ExtResource("2_1y85i")]
layout_mode = 2

[node name="LobbyItem5" parent="MenuContainer/LeftContainer/ScrollContainer/LobbiesContainer" instance=ExtResource("2_1y85i")]
layout_mode = 2

[node name="LobbyItem6" parent="MenuContainer/LeftContainer/ScrollContainer/LobbiesContainer" instance=ExtResource("2_1y85i")]
layout_mode = 2

[node name="LobbyItem7" parent="MenuContainer/LeftContainer/ScrollContainer/LobbiesContainer" instance=ExtResource("2_1y85i")]
layout_mode = 2

[node name="WaitingNode" type="Node2D" parent="MenuContainer/LeftContainer/ScrollContainer"]
visible = false
position = Vector2(-364, -124)
script = ExtResource("4_62jh7")

[node name="Plane" type="Polygon2D" parent="MenuContainer/LeftContainer/ScrollContainer/WaitingNode"]
color = Color(1, 1, 1, 0.529412)
polygon = PackedVector2Array(360, 120, 360, 530, 880, 530, 880, 120)

[node name="Spinner" type="Sprite2D" parent="MenuContainer/LeftContainer/ScrollContainer/WaitingNode"]
position = Vector2(620, 325)
texture = ExtResource("3_btudf")

[connection signal="pressed" from="MenuContainer/ButtonsContainer/Create" to="MenuContainer/ButtonsContainer/Create" method="_on_pressed"]
[connection signal="pressed" from="MenuContainer/ButtonsContainer/Exit" to="MenuContainer/ButtonsContainer/Exit" method="_on_pressed"]
[connection signal="text_changed" from="MenuContainer/LeftContainer/LobbyFilterSearch/LobbyFilter" to="MenuContainer/LeftContainer" method="_on_lobby_filter_changed"]
[connection signal="text_submitted" from="MenuContainer/LeftContainer/LobbyFilterSearch/LobbyFilter" to="MenuContainer/LeftContainer" method="_on_lobby_filter_submitted"]
[connection signal="pressed" from="MenuContainer/LeftContainer/LobbyFilterSearch/Search" to="MenuContainer/LeftContainer" method="_on_lobby_list_request"]
